Fix overlap by removing index

--- a/app/assets/stylesheets/dfm_web/layout.css
+++ b/app/assets/stylesheets/dfm_web/layout.css
@@ -27,7 +27,6 @@ body {
   position: relative;
   font-size: 1.5em;
   padding: 25px;
-  z-index: 1;
   pointer-events: none;
 }
 
